log
Sun 21 Aug 2022 02:30:49 AM UTC: 
 tests:  0|6
total_score: 0/70
978e638
Sun 21 Aug 2022 02:36:16 AM UTC: 
 list.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
f7e54f3
Sun 21 Aug 2022 02:44:42 AM UTC: 
 list.c | 9 +++++++--
 1 file changed, 7 insertions(+), 2 deletions(-)
 tests:  0|0
b7e88b8
Sun 21 Aug 2022 02:46:47 AM UTC: 
 list.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  0|0
58e5388
Sun 21 Aug 2022 02:48:42 AM UTC: 
 list.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
In file included from test.c:5:
list.c: In function ‘firstList’:
list.c:46:5: error: expected expression before ‘int’
   46 |     int * dato;
      |     ^~~
list.c:45:3: error: this ‘else’ clause does not guard... [-Werror=misleading-indentation]
   45 |   else
      |   ^~~~
list.c:47:5: note: ...this statement, but the latter is misleadingly indented as if it were guarded by the ‘else’
   47 |     dato=nodo->data;
      |     ^~~~
list.c:47:5: error: ‘dato’ undeclared (first use in this function)
list.c:47:5: note: each undeclared identifier is reported only once for each function it appears in
list.c:49:1: error: control reaches end of non-void function [-Werror=return-type]
   49 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
4fb19c8
Sun 21 Aug 2022 02:49:05 AM UTC: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
3a715e9
Sun 21 Aug 2022 02:55:45 AM UTC: 
 list.c | 11 ++++++++++-
 1 file changed, 10 insertions(+), 1 deletion(-)
 tests:  0|0
0863588
Sun 21 Aug 2022 03:00:19 AM UTC: 
 list.c | 5 +++++
 1 file changed, 5 insertions(+)
 tests:  5|4
total_score: 25/70
7b9e850
Sun 21 Aug 2022 03:04:26 AM UTC: 
 list.c | 10 ++++++++++
 1 file changed, 10 insertions(+)
 tests:  6|4
total_score: 25/70
da90f7c
Sun 21 Aug 2022 03:08:10 AM UTC: 
 list.c | 14 ++++++++++++++
 1 file changed, 14 insertions(+)
test.c: In function ‘prevList’:
test.c:448:5: error: ‘main’ is normally a non-static function [-Werror=main]
  448 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:468:1: error: expected declaration or statement at end of input
  468 | }
      | ^
At top level:
test.c:448:5: error: ‘main’ defined but not used [-Werror=unused-function]
  448 | int main( int argc, char *argv[] ) {
      |     ^~~~
In file included from test.c:5:
list.c:127:6: error: ‘cleanList’ defined but not used [-Werror=unused-function]
  127 | void cleanList(List * list) {
      |      ^~~~~~~~~
list.c:118:8: error: ‘popBack’ defined but not used [-Werror=unused-function]
  118 | void * popBack(List * list) {
      |        ^~~~~~~
list.c:105:6: error: ‘pushBack’ defined but not used [-Werror=unused-function]
  105 | void pushBack(List * list, void * data) {
      |      ^~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
00a00a3
Sun 21 Aug 2022 03:08:32 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  9|3
total_score: 35/70
8149934
Sun 21 Aug 2022 03:22:19 AM UTC: 
 list.c | 6 ++++++
 1 file changed, 6 insertions(+)
In file included from test.c:5:
list.c: In function ‘pushFront’:
list.c:108:10: error: ‘return’ with a value, in function returning void [-Werror=return-type]
  108 |   return nodo;
      |          ^~~~
list.c:102:6: note: declared here
  102 | void pushFront(List * list, void * data) {
      |      ^~~~~~~~~
list.c:104:13: error: ‘nodo’ is used uninitialized in this function [-Werror=uninitialized]
  104 |   nodo->data=data;
      |   ~~~~~~~~~~^~~~~
cc1: all warnings being treated as errors
Compilation failed
0a26104
Sun 21 Aug 2022 03:22:57 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
test.c: In function ‘pushFront’:
list.c:104:13: error: ‘nodo’ is used uninitialized in this function [-Werror=uninitialized]
  104 |   nodo->data=data;
      |   ~~~~~~~~~~^~~~~
cc1: all warnings being treated as errors
Compilation failed
72f0b12
Sun 21 Aug 2022 03:24:41 AM UTC: 
 list.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  0|0
150462a
Sun 21 Aug 2022 03:29:49 AM UTC: 
 list.c | 7 ++++++-
 1 file changed, 6 insertions(+), 1 deletion(-)
 tests:  0|0
095e927
Sun 21 Aug 2022 03:32:55 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
e41062f
Sun 21 Aug 2022 03:36:55 AM UTC: 
 list.c | 12 +++++++-----
 1 file changed, 7 insertions(+), 5 deletions(-)
 tests:  10|2
total_score: 45/70
465659c
Sun 21 Aug 2022 03:45:55 AM UTC: 
 list.c | 16 ++++++++++++++--
 1 file changed, 14 insertions(+), 2 deletions(-)
 tests:  10|2
total_score: 45/70
0f89bf2
Sun 21 Aug 2022 03:49:03 AM UTC: 
 list.c | 35 +++++++++++++++++++++--------------
 1 file changed, 21 insertions(+), 14 deletions(-)
 tests:  11|1
total_score: 60/70
8586f93
Sun 21 Aug 2022 03:51:26 AM UTC: 
 list.c | 19 -------------------
 1 file changed, 19 deletions(-)
 tests:  10|2
total_score: 45/70
9db7b91
Sun 21 Aug 2022 03:51:49 AM UTC: 
 list.c | 7 +++++++
 1 file changed, 7 insertions(+)
 tests:  10|2
total_score: 45/70
920292d
